--- a/app/templates/pages/test.html
+++ b/app/templates/pages/test.html
@@ -51,6 +51,10 @@ form {
     <h3>
 		Add Link
 	</h3>
+	<p>You unique link</p>
+	{% if user%}
+	<h5 class = 'lead'>https://snowflake-link.herokuapp.com/{{ user.username }}</h5>
+	{% endif %}
     <br>
     <form id='form' action='/test' method="POST">
         <div class="form-group">
