pushed list to bottom of page

--- a/app/templates/pages/show.html
+++ b/app/templates/pages/show.html
@@ -51,7 +51,7 @@
     overflow: scroll;
     height: 300px;
     width: auto;
-    position: fixed;
+    position: absolute;
     bottom: 0;
     width: 100%;
 }
