--- a/app/templates/pages/test.html
+++ b/app/templates/pages/test.html
@@ -9,7 +9,7 @@ form {
     overflow: scroll;
     height: 200px;
     width: auto;
-    position: relative;
+    position: absolute;
     bottom: 0;
     width: 100%;
 }
