--- a/app/templates/pages/test.html
+++ b/app/templates/pages/test.html
@@ -1,6 +1,12 @@
 {% extends "base_templates/login_base.html" %} {# base_templates extends base_templates/login_base.html #} {% block main %}
 
 <style type="text/css">
+html,
+body {
+    margin:0;
+    padding:0;
+    height:100%;
+}
 form {
     width: 80%;
     margin-bottom: 5%;
@@ -8,9 +14,9 @@ form {
 #list {
     overflow: scroll;
     height: 200px;
-    width: auto;
-    position: absolute;
-    bottom: 0;
+    width: 100%;
+    position: fixed;
+    bottom: 0px;
     width: 100%;
 }
 .navbar {
