--- a/app/templates/pages/test.html
+++ b/app/templates/pages/test.html
@@ -15,7 +15,7 @@ form {
     overflow: scroll;
     height: 200px;
     width: 100%;
-    position: fixed;
+    position: absolute;
     bottom: 0px;
     width: 100%;
 }
