pushed list to bottom of page

--- a/app/templates/pages/test.html
+++ b/app/templates/pages/test.html
@@ -1,7 +1,6 @@
 {% extends "base_templates/login_base.html" %} {# base_templates extends base_templates/login_base.html #} {% block main %}
 
 <style type="text/css">
-
 form {
     width: 80%;
     margin-bottom: 5%;
@@ -9,9 +8,9 @@ form {
 #list {
     overflow: scroll;
     height: 200px;
-    width: 100%;
-    position: absolute;
-    bottom: 0px;
+    width: auto;
+    position: relative;
+    bottom: 0;
     width: 100%;
 }
 .navbar {
