--- a/app/templates/pages/test.html
+++ b/app/templates/pages/test.html
@@ -3,7 +3,7 @@
 <style type="text/css">
 form {
     width: 80%;
-    margin-bottom: 5%;
+    margin-bottom: 15px;
 }
 #list {
     overflow: scroll;
