--- a/app/templates/pages/test.html
+++ b/app/templates/pages/test.html
@@ -3,15 +3,15 @@
 <style type="text/css">
 form {
     width: 80%;
-    margin-bottom: 15px;
+    margin-bottom: 5px;
 }
 #list {
     overflow: scroll;
-    height: 150px;
+    height: 200px;
     width: auto;
     position: relative;
     bottom: 0;
-    
+    width: 100%;
 }
 .navbar {
     background-color: #BC5798;
