--- a/app/templates/pages/show.html
+++ b/app/templates/pages/show.html
@@ -67,6 +67,9 @@ body {
 .media {
     margin-left: 4px;
 }
+#join{
+    margin-bottom: 7%;
+}
 </style>
 <nav class="navbar navbar-default">
     <div class="navbar-header">
@@ -87,7 +90,7 @@ body {
     <div class="media-body ">
         <h4 class="media-heading">{{ user }}</h4>
         <center>
-        <a href ="{{ url_for('user.register') }}" style="margin-top:20px; color: #fff; background-color: #BC5798; border-color: #BC5798;" class="btn btn-info ">Join SnowFlake
+        <a id = 'join' href ="{{ url_for('user.register') }}" style="margin-top:20px; color: #fff; background-color: #BC5798; border-color: #BC5798;" class="btn btn-info ">Join SnowFlake
         </a></center>
     </div>
 </div>
