change link name

--- a/app/templates/pages/log.html
+++ b/app/templates/pages/log.html
@@ -21,8 +21,7 @@ body {
 .text-primary {
     font-weight: 500;
 }
-hr {} 
-.jumbotron {}
+hr {} .jumbotron {}
 </style>
 
 <body>
@@ -31,7 +30,7 @@ hr {}
             <a class="navbar-brand" href="#">SnowFlake User Log (admin Only)</a>
         </div>
     </nav>
-{% if users %} {% for user in users %}
+    {% if users %} {% for user in users %}
     <div class="row">
         <div class="col-md-4">
             <div class='jumbotron'>
@@ -39,8 +38,9 @@ hr {}
                     <ul>
                         <li>
                             <h4>Number of Users</h4>
-                            <h3 style="color: blue;">((users|length))</h3>
                         </li>
+                        <h3 style="color: blue;">{{users|length}}</h3>
+
                         <hr>
                     </ul>
                 </div>
@@ -50,7 +50,7 @@ hr {}
             <div class='jumbotron'>
                 <div class='container'>
                     <ul>
-                        
+
                         <li>
                             <h4>{{ user.username }}</h4>
                         </li>
