--- a/app/templates/pages/log.html
+++ b/app/templates/pages/log.html
@@ -30,7 +30,7 @@ hr {} .jumbotron {}
             <a class="navbar-brand" href="#">SnowFlake User Log (admin Only)</a>
         </div>
     </nav>
-    {% if users %} {% for user in users %}
+    {% if users %} 
     <div class="row">
         <div class="col-md-4">
             <div class='jumbotron'>
@@ -50,7 +50,7 @@ hr {} .jumbotron {}
             <div class='jumbotron'>
                 <div class='container'>
                     <ul>
-
+                        {% for user in users %}
                         <li>
                             <h4>{{ user.username }}</h4>
                         </li>
