--- a/app/templates/pages/show.html
+++ b/app/templates/pages/show.html
@@ -56,7 +56,7 @@ body {
 #list {
     overflow: scroll;
     height: 300px;
-    position: fixed;
+    position: relative;
     bottom: 0px;
     width: 100%;
 }
