change height of list of links

--- a/app/templates/pages/show.html
+++ b/app/templates/pages/show.html
@@ -35,7 +35,7 @@ body {
     /* Required for text-overflow to do anything */
     
     white-space: nowrap;
-    overflow: hidden;
+    overflow: hidden scroll;
 }
 #info {
     margin-top: 0%;
@@ -55,7 +55,7 @@ body {
 }
 #list {
     overflow: scroll;
-    height: 300px;
+    height: 150px;
     position: relative;
     bottom: 0px;
     width: 100%;
