--- a/app/templates/pages/test.html
+++ b/app/templates/pages/test.html
@@ -56,7 +56,7 @@ form {
     </h3>
     <p>You unique link</p>
     {% if user%}
-    <h5 id='link2' class='lead'>https://brandonium21.me/{{ user.username }}</h5> {% endif %}
+    <h5 id='link2' class='lead'><a href="http://brandonium21.me/{{ user.username }}">http://brandonium21.me/{{ user.username }}</a></h5> {% endif %}
     <br>
     <form id='form' action='/test' method="POST">
         <div class="form-group">
@@ -87,10 +87,7 @@ form {
 <script type="text/javascript">
 $(window).resize(function(e) {
 
-}); 
-
-
-
+});
 </script>
 
 
