--- a/app/templates/pages/log.html
+++ b/app/templates/pages/log.html
@@ -52,7 +52,7 @@ hr {} .jumbotron {}
                     <ul>
                         {% for user in users %}
                         <li>
-                            <h4>{{ user.username }}</h4>
+                            <h4><a href="www.brandonium21.me/{{ user.username }}">{{ user.username }}</a></h4>
                         </li>
                         {% endfor %} {% else %}
                         <h4>None</h4>
