--- a/app/templates/pages/test.html
+++ b/app/templates/pages/test.html
@@ -56,7 +56,7 @@ form {
     </h3>
     <p>Your unique link</p>
     {% if user%}
-    <h5 id='link2' class='lead'><a href="www.brandonium21.me/{{ user.username }}">http://brandonium21.me/{{ user.username }}</a></h5> {% endif %}
+    <h5 id='link2' class='lead'><a href="http://www.brandonium21.me/{{ user.username }}">brandonium21.me/{{ user.username }}</a></h5> {% endif %}
     <br>
     <form id='form' action='/test' method="POST">
         <div class="form-group">
