--- a/app/templates/pages/show.html
+++ b/app/templates/pages/show.html
@@ -108,9 +108,12 @@ body {
     </div>
 </div>
 {% endif %}
+<!--//
 <center>
-    <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button_count"></div>
+    <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="link"></div>
+    <br></br>
 </center>
+-->
 <div id='list'>
     <ul class="list-group">
         {% for link in links %}
@@ -121,8 +124,10 @@ body {
         {% endfor %}
     </ul>
 </div>
-
+<!--//
 <div id="fb-root"></div>
+
+
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
@@ -130,4 +135,5 @@ body {
   js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3&appId=353058034890090";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
+-->
 {% endblock %}
