--- a/app/templates/pages/test.html
+++ b/app/templates/pages/test.html
@@ -48,7 +48,7 @@ form {
 #delete{
     position: absolute;
 right: 0;
-top: /* whatever */;
+top: 0;
 }
 </style>
 <nav class="navbar navbar-default">
