--- a/app/templates/pages/test.html
+++ b/app/templates/pages/test.html
@@ -49,8 +49,8 @@ form {
     position: absolute;
     right: 0;
     top: 0;
-    margin-bottom: 1;
-    margin-top: 1;
+    margin-bottom: 1px;
+    margin-top: 3px;
 }
 </style>
 <nav class="navbar navbar-default">
