--- a/app/templates/pages/test.html
+++ b/app/templates/pages/test.html
@@ -45,7 +45,7 @@ form {
 #link2 {
     color: red;
 }
-#delete{
+#app{
     position: absolute;
     right: 0;
     top: 0;
@@ -87,7 +87,7 @@ form {
             <li class="list-group-item"><a id={{link.id}} class='pull-left' href="{{ link.url }}">{{ link.title }}</a>
                 <p id='description'>{{ link.description }}</p>
                 <form action="/test" id = 'id' method="POST">
-                        <button type="submit" name='delete' value = "{{link.id}}" class="btn btn-danger"><strong>x</strong>
+                        <button type="submit" id = 'app' name='delete' value = "{{link.id}}" class="btn btn-danger"><strong>x</strong>
                     </button>
                 </form>
             </li>
