--- a/app/templates/pages/test.html
+++ b/app/templates/pages/test.html
@@ -86,7 +86,7 @@ form {
             {% for link in links %}
             <li class="list-group-item"><a id={{link.id}} class='pull-left' href="{{ link.url }}">{{ link.title }}</a>
                 <p id='description'>{{ link.description }}</p>
-                <form action="/test" id = 'id' method="POST">
+                <form action="/delete" id = 'id' method="POST">
                         <button type="submit" id = 'app' name='delete' value = "{{link.id}}" class="btn btn-danger"><strong>x</strong>
                     </button>
                 </form>
