--- a/app/templates/pages/test.html
+++ b/app/templates/pages/test.html
@@ -104,7 +104,7 @@ $(window).resize(function(e) {
 
 <script>
 function reload() {
-    setTimeout( relot(){ location.reload(); }, 50  );
+    setTimeout( relot(){ window.location.reload(); }, 50  );
     
 }
 </script>
