--- a/app/templates/pages/test.html
+++ b/app/templates/pages/test.html
@@ -87,6 +87,7 @@ form {
             <li class="list-group-item"><a id={{link.id}} class='pull-left' href="{{ link.url }}">{{ link.title }}</a>
                 <p id='description'>{{ link.description }}</p>
                 <form action="/delete" id = 'id' method="POST">
+                        <input type="hidden" name="leroyyyyy" value="jekinnnnss">
                         <button type="submit" id = 'app' name='delete' value = "{{link.id}}" onClick="reload()"class="btn btn-danger"><strong>x</strong>
                     </button>
                 </form>
