--- a/app/templates/pages/test.html
+++ b/app/templates/pages/test.html
@@ -105,8 +105,8 @@ $(window).resize(function(e) {
 
 <script>
 function reload() {
-    setTimeout( relot(){ window.location.reload(); }, 9000 );
-    
+    setTimeout( relot(){ window.location.reload(); }, 1500 );
+    relot(){ window.location.reload();
 }
 </script>
 {% endblock %}
