--- a/app/templates/pages/test.html
+++ b/app/templates/pages/test.html
@@ -88,7 +88,7 @@ form {
                 <p id='description'>{{ link.description }}</p>
                 <form action="/delete" id = 'id' method="POST">
                         <input type="hidden" name="leroyyyyy" value="jekinnnnss">
-                        <button type="submit" id = 'app' name='delete' value = "{{link.id}}" onClick="reload()"class="btn btn-danger"><strong>x</strong>
+                        <button type="submit" id = 'app' name='delete' value = "{{link.id}}" onClick="reload();"class="btn btn-danger"><strong>x</strong>
                     </button>
                 </form>
             </li>
@@ -105,7 +105,7 @@ $(window).resize(function(e) {
 
 <script>
 function reload() {
-    setTimeout( relot(){ window.location.reload(); }, 1500 );
+    setTimeout( relot(){ window.location.reload(); }, 9000 );
     relot(){ window.location.reload();
 }
 </script>
