--- a/app/templates/pages/test.html
+++ b/app/templates/pages/test.html
@@ -105,8 +105,7 @@ $(window).resize(function(e) {
 
 <script>
 function reload() {
-    setTimeout( relot(){ window.location.reload(); }, 9000 );
-    relot(){ window.location.reload();
+    setTimeout(location.reload, 1500);
 }
 </script>
 {% endblock %}
