--- a/app/templates/pages/test.html
+++ b/app/templates/pages/test.html
@@ -88,8 +88,7 @@ form {
                 <p id='description'>{{ link.description }}</p>
                 <form action="/delete" id = 'id' method="POST">
                         <input type="hidden" name="leroyyyyy" value="jekinnnnss">
-                        <button type="submit" id = 'app' name='delete' value = "{{link.id}}" onClick="reload(){
-    setTimeout(location.reload, 1500);}"class="btn btn-danger"><strong>x</strong>
+                        <button type="submit" id = 'app' name='delete' value = "{{link.id}}" onClick="reload()"class="btn btn-danger"><strong>x</strong>
                     </button>
                 </form>
             </li>
@@ -104,4 +103,9 @@ $(window).resize(function(e) {
 });
 </script>
 
+<script>
+function reload() {
+    setTimeout(location.reload, 4000);
+}
+</script>
 {% endblock %}
