--- a/app/templates/pages/test.html
+++ b/app/templates/pages/test.html
@@ -67,7 +67,7 @@ form {
     </h3>
     <p>Your unique link</p>
     {% if user%}
-    <h5 id='link2' class='lead'><a href="http://snowflakeapp.herokuapp.com/{{ user.username }}">brandonium21.me/{{ user.username }}</a></h5> {% endif %}
+    <h5 id='link2' class='lead'><a href="http://snowflakeapp.herokuapp.com/{{ user.username }}">snowflakeapp.herokuapp.com/{{ user.username }}</a></h5> {% endif %}
     <br>
     <form id='form' action='/test' method="POST">
         <div class="form-group">
@@ -86,7 +86,7 @@ form {
             {% for link in links %}
             <li class="list-group-item"><a id={{link.id}} class='pull-left' href="{{ link.url }}">{{ link.title }}</a>
                 <p id='description'>{{ link.description }}</p>
-                <form action="/delete" id = 'id' method="POST">
+                <form id = 'id' method="POST">
                         <button type="submit" id = 'app' name='delete' value = "{{link.id}}" class="btn btn-danger"><strong>x</strong>
                     </button>
                 </form>
