--- a/app/templates/pages/show.html
+++ b/app/templates/pages/show.html
@@ -31,7 +31,8 @@ body {
     width: 60%;
     white-space: nowrap;
     overflow: hidden;
-    text-overflow: ellipsis
+    text-overflow: ellipsis;
+    margin-left: 45%;
 }
 
 #link {
@@ -42,17 +43,6 @@ body {
     float: left;
     width: 50%;
     clear: left;
-}
-
-.right {
-    display: inline;
-    color: #777;
-    float: right;
-    width: 50%;
-    text-overflow: ellipsis;
-    /* Required for text-overflow to do anything */
-    white-space: nowrap;
-    overflow: hidden;
 }
 
 #info {
@@ -97,10 +87,15 @@ body {
 </style>
 <nav class="navbar navbar-default">
     <div class="navbar-header">
-        <a class="navbar-brand" style='font-family: HelveticaNeue-Light;' href="#">SnowFlake</a>
-        <a class="navbar-brand pull-right" href="#menu">
-            <span style="color: #BC5798" class="glyphicon glyphicon-cog"></span>
+        <a class="navbar-brand" style='font-family: HelveticaNeue-Light;' href="#">SnowFlake</a> {% if current_user.is_authenticated() %}
+        <a href="{{ url_for('user.logout') }}" class="navbar-brand pull-right">
+            <span style="color: #d9534f" class="glyphicon glyphicon-off"></span>
         </a>
+        {% else %}
+        <a href="{{ url_for('user.login') }}" class="navbar-brand pull-right">
+            <span style="color: #5cb85c" class="glyphicon glyphicon-off"></span>
+        </a>
+        {% endif %}
     </div>
 </nav>
 {% if user %}
@@ -124,18 +119,30 @@ body {
     <br></br>
 </center>
 -->
-<div id='list'>
-    <ul class="list-group">
+<div id='list '>
+    <ul class="list-group clearfix">
         {% for link in links %}
         <li style="cursor: pointer;" class="list-group-item">
             <span id="fav" class='pull-left'><img src="http://www.google.com/s2/favicons?domain={{ link.url }}"></span>
-            <a id='link' class='' href="{{ link.url }}">{{ link.title }}</a>
-            <p class='right' id='description'>{{ link.description }}</p>
+            <a id='link' class='pull-left' style="white-space: nowrap; max-width: 32%; overflow: hidden; text-overflow: ellipsis; height: 20px;" href="{{ link.url }}">{{ link.title }}</a>
+            <span><p class='right' id='description'>{{ link.description }}</p></span>
         </li>
-        <div class='clearfix'></div>
         {% endfor %}
     </ul>
 </div>
+<script type="text/javascript">
+$('.list-group-item').delegate('a', 'click', function(event) {
+    var url = this.href;
+
+    //Code to log some data...
+
+    setTimeout(function() {
+        window.location = url;
+    }, 100);
+
+    event.preventDefault();
+});
+</script>
 <!--//
 <div id="fb-root"></div>
 
