--- a/app/templates/pages/letitsnow.html
+++ b/app/templates/pages/letitsnow.html
@@ -40,8 +40,8 @@ form {
     color: #BC5798;
 }
 
-.clist-group-item {
-    margin-bottom: 2px;
+.list-group-item {
+    height: 52px;
 }
 
 #link2 {
