--- a/app/templates/pages/show.html
+++ b/app/templates/pages/show.html
@@ -12,6 +12,10 @@ body {
     border-color: #eee;
 }
 
+.list-group-item {
+    height: 52px;
+}
+
 .navbar-default .navbar-brand {
     color: #BC5798;
 }
