--- a/app/templates/pages/show.html
+++ b/app/templates/pages/show.html
@@ -68,12 +68,11 @@ body {
 }
 
 #list {
-    overflow: scroll;
-    height: 50%;
+    height: 40%;
+    width: auto;
     position: relative;
-    bottom: 0px;
+    bottom: 0;
     width: 100%;
-    clear: both;
 }
 
 .media-object {
