--- a/app/templates/pages/show.html
+++ b/app/templates/pages/show.html
@@ -69,7 +69,7 @@ body {
 }
 
 #list {
-    height: 200px;
+    height: 40%;
     width: auto;
     position: relative;
     bottom: 0;
@@ -123,7 +123,7 @@ body {
     <br></br>
 </center>
 -->
-<div id='list '>
+<div id='list'>
     <ul class="list-group clearfix">
         {% for link in links %}
         <li style="cursor: pointer;" class="list-group-item">
