--- a/app/templates/pages/letitsnow.html
+++ b/app/templates/pages/letitsnow.html
@@ -121,7 +121,9 @@ form {
                     <li id="soc"><img id="favimg" src="https://www.tumblr.com/favicon.ico"><span>Tumblr</span></li>
                     <li id="soc"><img src="http://www.google.com/s2/favicons?domain=www.vine.co"><span>Vine</span></li>
                     <li id="soc"><img src="http://www.google.com/s2/favicons?domain=www.linkedin.com"><span>LinkedIn</span></li>
+                    <li id="soc"><img src="http://www.google.com/s2/favicons?domain=www.github.com"><span>Github</span></li>
                     <li id="soc"><img src="http://www.google.com/s2/favicons?domain=www.pinterest.com"><span>Pinterest</span></li>
+                    <li id="soc"><img src="http://www.google.com/s2/favicons?domain=www.dribbble.com"><span>Dribbble</span></li>
                 </ul>
             </div>
             <!-- /btn-group -->
