--- a/app/templates/pages/letitsnow.html
+++ b/app/templates/pages/letitsnow.html
@@ -104,7 +104,7 @@ form {
     {% if user%}
     <h5 id='link2' class='lead'><a href="http://snowflakeapp.herokuapp.com/{{ user.username }}">snowflakeapp.herokuapp.com/{{ user.username }}</a></h5> {% endif %}
     <br>
-    <form id='form' action='/test' method="POST">
+    <form id='form' action='/letitsnow' method="POST">
         <div class="form-group">
             <input type="text" class="form-control" name="title" placeholder="Title...">
         </div>
