--- a/app/templates/pages/letitsnow.html
+++ b/app/templates/pages/letitsnow.html
@@ -8,7 +8,7 @@ form {
 #list {
     height: 200px;
     width: auto;
-    position: fixed;
+    position: relative;
     bottom: 0;
     width: 100%;
 }
