--- a/app/templates/pages/letitsnow.html
+++ b/app/templates/pages/letitsnow.html
@@ -86,6 +86,18 @@ form {
 .input-group {
     margin-bottom: 15px;
 }
+
+#wrapper {
+    width: 60%;
+    height: auto;
+}
+
+@media screen and (max-device-width: 480px) {
+    #wrapper {
+        width: 100%;
+        height: auto;
+    }
+}
 </style>
 <nav class="navbar navbar-default">
     <div class="navbar-header">
@@ -97,66 +109,68 @@ form {
         </a>
     </div>
 </nav>
-<center>
-    <h3>
+<div id= "wrap" class="container">
+    <center>
+        <h3>
         Add Link
     </h3>
-    <p>Your unique link</p>
-    {% if user%}
-    <h5 id='link2' class='lead'><a href="http://snowflakeapp.herokuapp.com/{{ user.username }}">snowflakeapp.herokuapp.com/{{ user.username }}</a></h5> {% endif %}
-    <br>
-    <form id='form' action='/letitsnow' method="POST">
-        <div class="form-group">
-            <input type="text" class="form-control" name="title" placeholder="Title...">
-        </div>
-        <div class="input-group">
-            <div class="input-group-btn">
-                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Social<span class="caret"></span></button>
-                <ul class="dropdown-menu">
-                    <li class="dropdown-header">Choose one and input username</li>
-                    <li role="separator" class="divider"></li>
-                    <li id="soc"><img src="http://www.google.com/s2/favicons?domain=www.snowflakeapp.herokuapp.com"><span>Url</span></li>
-                    <li id="soc"><img src="http://www.google.com/s2/favicons?domain=www.facebook.com"><span>Facebook</span></li>
-                    <li id="soc"><img src="http://www.google.com/s2/favicons?domain=www.twitter.com"><span>Twitter</span></li>
-                    <li id="soc"><img src="http://www.google.com/s2/favicons?domain=www.instagram.com"><span>Instagram</span></li>
-                    <li id="soc"><img id="favimg" src="https://www.tumblr.com/favicon.ico"><span>Tumblr</span></li>
-                    <li id="soc"><img src="http://www.google.com/s2/favicons?domain=www.vine.co"><span>Vine</span></li>
-                    <li id="soc"><img src="http://www.google.com/s2/favicons?domain=www.linkedin.com"><span>LinkedIn</span></li>
-                    <li id="soc"><img src="http://www.google.com/s2/favicons?domain=www.github.com"><span>Github</span></li>
-                    <li id="soc"><img src="http://www.google.com/s2/favicons?domain=www.pinterest.com"><span>Pinterest</span></li>
-                    <li id="soc"><img src="http://www.google.com/s2/favicons?domain=www.dribbble.com"><span>Dribbble</span></li>
-                </ul>
+        <p>Your unique link</p>
+        {% if user%}
+        <h5 id='link2' class='lead'><a href="http://snowflakeapp.herokuapp.com/{{ user.username }}">snowflakeapp.herokuapp.com/{{ user.username }}</a></h5> {% endif %}
+        <br>
+        <form id='form' action='/letitsnow' method="POST">
+            <div class="form-group">
+                <input type="text" class="form-control" name="title" placeholder="Title...">
             </div>
-            <!-- /btn-group -->
-            <input id="url" type="text" class="form-control" name="url" placeholder="Url...">
-        </div>
-        <textarea class="form-control" name='description' placeholder="Description" rows="2"></textarea>
-        <br>
-        <button type="submit" id='submit' class="btn btn-success">
-            Add Link
-        </button>
-        <br>
-        <br>
-    </form>
-    <div id='list'>
-        <ul class="list-group clearfix">
-            {% for link in links %}
-            <li class="list-group-item" style="text-align: left; ">
-                <span id="fav" class='pull-left'><img src="http://www.google.com/s2/favicons?domain={{ link.url }}"></span>
-                <a id={{link.id}} class='pull-left' style="white-space: nowrap; max-width: 32%; overflow: hidden; text-overflow: ellipsis; height: 20px;" href="{{ link.url }}">{{ link.title }}</a>
-                <span class="text-danger"><p id='description'>{{ link.description }}</p></span>
-                <form action="/delete" id='id' method="POST">
-                    <span>
+            <div class="input-group">
+                <div class="input-group-btn">
+                    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Social<span class="caret"></span></button>
+                    <ul class="dropdown-menu">
+                        <li class="dropdown-header">Choose one and input username</li>
+                        <li role="separator" class="divider"></li>
+                        <li id="soc"><img src="http://www.google.com/s2/favicons?domain=www.snowflakeapp.herokuapp.com"><span>Url</span></li>
+                        <li id="soc"><img src="http://www.google.com/s2/favicons?domain=www.facebook.com"><span>Facebook</span></li>
+                        <li id="soc"><img src="http://www.google.com/s2/favicons?domain=www.twitter.com"><span>Twitter</span></li>
+                        <li id="soc"><img src="http://www.google.com/s2/favicons?domain=www.instagram.com"><span>Instagram</span></li>
+                        <li id="soc"><img id="favimg" src="https://www.tumblr.com/favicon.ico"><span>Tumblr</span></li>
+                        <li id="soc"><img src="http://www.google.com/s2/favicons?domain=www.vine.co"><span>Vine</span></li>
+                        <li id="soc"><img src="http://www.google.com/s2/favicons?domain=www.linkedin.com"><span>LinkedIn</span></li>
+                        <li id="soc"><img src="http://www.google.com/s2/favicons?domain=www.github.com"><span>Github</span></li>
+                        <li id="soc"><img src="http://www.google.com/s2/favicons?domain=www.pinterest.com"><span>Pinterest</span></li>
+                        <li id="soc"><img src="http://www.google.com/s2/favicons?domain=www.dribbble.com"><span>Dribbble</span></li>
+                    </ul>
+                </div>
+                <!-- /btn-group -->
+                <input id="url" type="text" class="form-control" name="url" placeholder="Url...">
+            </div>
+            <textarea class="form-control" name='description' placeholder="Description" rows="2"></textarea>
+            <br>
+            <button type="submit" id='submit' class="btn btn-success">
+                Add Link
+            </button>
+            <br>
+            <br>
+        </form>
+        <div id='list'>
+            <ul class="list-group clearfix">
+                {% for link in links %}
+                <li class="list-group-item" style="text-align: left; ">
+                    <span id="fav" class='pull-left'><img src="http://www.google.com/s2/favicons?domain={{ link.url }}"></span>
+                    <a id={{link.id}} class='pull-left' style="white-space: nowrap; max-width: 32%; overflow: hidden; text-overflow: ellipsis; height: 20px;" href="{{ link.url }}">{{ link.title }}</a>
+                    <span class="text-danger"><p id='description'>{{ link.description }}</p></span>
+                    <form action="/delete" id='id' method="POST">
+                        <span>
                         <button type="submit" id = 'app' name='delete' value = "{{link.id}}" class="btn btn-danger btn-circle ">
                             <strong><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></strong>
-                    </button>
-                    </span>
-                </form>
-            </li>
-            {% endfor %}
-        </ul>
-    </div>
-</center>
+                        </button>
+                        </span>
+                    </form>
+                </li>
+                {% endfor %}
+            </ul>
+        </div>
+    </center>
+</div>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 <script type="text/javascript">
 $(window).resize(function(e) {
