--- a/app/templates/pages/letitsnow.html
+++ b/app/templates/pages/letitsnow.html
@@ -88,7 +88,7 @@ form {
 }
 
 #wrapper {
-    width: 40%;
+    max-width: 40%;
     height: auto;
 }
 
@@ -109,7 +109,7 @@ form {
         </a>
     </div>
 </nav>
-<div id= "wrap" class="container">
+<div id="wrap" class="container">
     <center>
         <h3>
         Add Link
