--- a/app/templates/pages/letitsnow.html
+++ b/app/templates/pages/letitsnow.html
@@ -92,10 +92,17 @@ form {
     height: auto;
 }
 
+body {
+    background-color: #eee;
+}
+
 @media screen and (max-device-width: 480px) {
     #wrapper {
         width: 100%;
         height: auto;
+    }
+    body {
+        background-color: #fff;
     }
 }
 </style>
