--- a/app/templates/pages/letitsnow.html
+++ b/app/templates/pages/letitsnow.html
@@ -87,7 +87,7 @@ form {
     margin-bottom: 15px;
 }
 
-#wrapper {
+#wrap {
     max-width: 40%;
     height: auto;
 }
@@ -97,7 +97,7 @@ body {
 }
 
 @media screen and (max-device-width: 600px) {
-    #wrapper {
+    #wrap {
         width: 100%;
         height: auto;
     }
