--- a/app/templates/pages/letitsnow.html
+++ b/app/templates/pages/letitsnow.html
@@ -96,10 +96,11 @@ body {
     background-color: #eee;
 }
 
-@media screen and (max-device-width: 600px) {
+@media screen and (max-device-width: 450px) {
     #wrap {
         width: 100%;
         height: auto;
+        background-color: #fff;
     }
     body {
         background-color: #fff;
