--- a/app/templates/pages/letitsnow.html
+++ b/app/templates/pages/letitsnow.html
@@ -96,9 +96,9 @@ body {
     background-color: #eee;
 }
 
-@media screen and (max-device-width: 450px) {
+@media only screen and (max-width: 450px) {
     #wrap {
-        width: 100%;
+        max-width: 100%;
         height: auto;
         background-color: #fff;
     }
