--- a/app/templates/pages/letitsnow.html
+++ b/app/templates/pages/letitsnow.html
@@ -118,7 +118,7 @@ body {
         </a>
     </div>
 </nav>
-<div id="wrap" class="container">
+<div id="wrap">
     <center>
         <h3>
         Add Link
