--- a/app/templates/pages/letitsnow.html
+++ b/app/templates/pages/letitsnow.html
@@ -91,6 +91,7 @@ form {
     max-width: 40%;
     height: auto;
     background-color: #fff;
+    padding: 0%;
 }
 
 body {
@@ -118,7 +119,7 @@ body {
         </a>
     </div>
 </nav>
-<div id="wrap">
+<div id="wrap" class="container">
     <center>
         <h3>
         Add Link
